--- a/WebContent/css/app.css
+++ b/WebContent/css/app.css
@@ -199,7 +199,7 @@ main {
   top: 0;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 5;
+  z-index: 500;
 }
 .warningBox__close {
   position: absolute;
@@ -943,6 +943,10 @@ main {
   border-top: 1px solid #afafaf;
   min-height: 300px;
   border-bottom: 1px solid #afafaf;
+}
+.articleDetailBody__bodytext__blindbody{
+	font-size:20px;
+	background-color:#DDDDDD;
 }
 .articleDetailBody__likeanddislike {
   position: relative;
